--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   "homepage": "https://github.com/kimyu92/flask-boilerplate#readme",
   "devDependencies": {
     "bower": "^1.4.1"
+  },
+  "dependencies": {
+    "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-clean": "^0.3.1",
+    "gulp-size": "^1.2.3",
+    "react": "^0.13.3",
+    "reactify": "^1.1.1"
   }
 }
