--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery": "~2.1.4",
     "react": "~0.13.3",
     "bootstrap-sass-official": "~3.3.5",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "materialize": "~0.97.0"
   }
 }
